# dreyna-vaelyndra

./: ANDROID_APP.md  PLAY_STORE_RELEASE.md  README.md  WORLD_CHANGES.md  capacitor.config.ts  index.html  package-lock.json  package.json  tailwind.config.js
.github/workflows/: android-debug-apk.yml  fly-deploy.yml  sync-zepeto-stats.yml
android/app/: build.gradle  google-services.json
backend/: .dockerignore  .gitignore  Dockerfile  README.md  fly.toml  pyproject.toml
backend/.venv_check/: pyvenv.cfg
backend/app/: catalog_seed.py  creatures.py  db.py  familiars.py  familiars_xp.py  grades.py  handles.py  main.py  media_storage.py  models.py  ranking_eligibility.py  schemas.py
backend/app/auth/: __init__.py  crypto.py  dependencies.py  email_typo.py  emailer.py  models.py  rate_limit.py  routes.py
backend/app/routers/: admin.py  catalog.py  familiars.py  live.py  messages.py  oracle.py  posts.py  reports.py  stats.py  streamers.py  stripe_router.py  users.py  worlds.py
controllers/: items.js  users.js
docs/: avatar-asset-research.md  avatar-assets.md  first-member-apk.md  world-assets.md
public/: manifest.webmanifest
public/avatar-premium/: koakuma-document.txt
routes/: items.js  users.js
scripts/: generate_creature_assets.py  sync-zepeto-stats.mjs
src/: App.tsx  index.css  main.tsx  types.ts
src/components/: AdminOfficialEventsTab.tsx  AdminReportsTab.tsx  AdminRequestsTab.tsx  AdminUserPanel.tsx  AdminUsersTab.tsx  Avatar3DModel.tsx  AvatarEditor.tsx  AvatarImage.tsx  AvatarProfileBanner.tsx  AvatarShop.tsx  AvatarViewer.tsx  BFFModule.tsx  CommunityContestBanner.tsx  CommunityImmersiveFeed.tsx  CookieBanner.tsx  CreaturePickerModal.tsx  DailyRewardCard.tsx  (+51 more)
(+112 files in other folders)
