[project]
name = "vaelyndra-backend"
version = "0.1.0"
description = "Backend de la cour de Vaelyndra (posts, commentaires, réactions)."
requires-python = ">=3.11"
dependencies = [
    "fastapi[standard]>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "sqlmodel>=0.0.22",
    "pydantic>=2.6",
    "email-validator>=2.2",
    # Auth (PR "Mon compte") :
    # - argon2-cffi : hash mots de passe (argon2id, standard 2024)
    # - pyjwt : cookies session signés
    # - pyotp : 2FA TOTP
    # - qrcode : génération du QR pour 2FA setup
    # - slowapi : rate limiting sur /auth/login + /auth/register
    # - resend : envoi email de vérification + reset password
    "argon2-cffi>=23.1",
    "pyjwt>=2.9",
    "pyotp>=2.9",
    "qrcode[pil]>=7.4",
    "slowapi>=0.1.9",
    "resend>=2.4",
    # Stripe : encaissement des achats de Sylvins (Checkout Session + webhook)
    # et, plus tard, virement des recettes streamer via Stripe Connect.
    "stripe>=11.0",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]
